--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -91,6 +91,11 @@
             app:destination="@id/nav_future_transactions"
             app:popUpTo="@id/nav_future_transactions"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_to_importCSVFragment"
+            app:destination="@id/nav_import_csv"
+            app:popUpTo="@id/nav_import_csv"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/nav_account_type"
@@ -199,5 +204,11 @@
             app:destination="@id/nav_category_summary"
             app:popUpTo="@id/nav_category_summary"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_import_csv"
+        android:name="com.adithya.aaafexpensemanager.settings.importCSV.UploadCSVFragment"
+        android:label="Import CSV"
+        tools:layout="@layout/fragment_setting_upload_csv">
     </fragment>
 </navigation>
