--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -96,6 +96,11 @@
             app:destination="@id/nav_import_csv"
             app:popUpTo="@id/nav_import_csv"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_to_autoBackupFragment"
+            app:destination="@id/nav_autobackup_dir_sel"
+            app:popUpTo="@id/nav_autobackup_dir_sel"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/nav_account_type"
@@ -210,5 +215,11 @@
         android:name="com.adithya.aaafexpensemanager.settings.importCSV.UploadCSVFragment"
         android:label="Import CSV"
         tools:layout="@layout/fragment_setting_upload_csv">
+    </fragment>
+    <fragment
+        android:id="@+id/nav_autobackup_dir_sel"
+        android:name="com.adithya.aaafexpensemanager.settings.autoBackup.AutoBackupDirectorySelectionFragment"
+        android:label="Auto Backup"
+        tools:layout="@layout/fragment_setting_autobackup_directory_selection">
     </fragment>
 </navigation>
