--- a/app/src/main/res/layout/fragment_setting_export_database.xml
+++ b/app/src/main/res/layout/fragment_setting_export_database.xml
@@ -1,32 +1,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/directoryInputLayout"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/selectFileButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Export Directory"
-        app:endIconMode="custom"
-        app:endIconDrawable="@drawable/baseline_create_new_folder_24">
-        <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/directoryEditText"
-        android:layout_width="match_parent"
+        android:text="Select Export Location"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/fileSelectedTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusable="false"
-        android:inputType="none" />
+        android:layout_marginTop="16dp"
+        android:text="No location selected"
+        tools:ignore="HardcodedText" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/exportButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        android:text="Export" />
+        android:layout_marginTop="16dp"
+        android:text="Export Database"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/exportStatusTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text=""
+        android:scrollbars="vertical"
+        android:maxLines="10"/>
 
 </LinearLayout>
