- Import Database refactored

--- a/app/src/main/res/layout/fragment_setting_import_database.xml
+++ b/app/src/main/res/layout/fragment_setting_import_database.xml
@@ -1,33 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/directoryInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/selectFileButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Select Zip File"
-        app:endIconMode="custom" app:endIconDrawable="@drawable/baseline_create_new_folder_24">
-        <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/directoryEditText"
-        android:layout_width="match_parent"
+        android:text="Select Database Zip File" />
+
+    <TextView
+        android:id="@+id/fileSelectedTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusable="false"
-        android:inputType="none" />
+        android:layout_marginTop="16dp"
+        android:text="No file selected" />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/importButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Import Database" />
+
+    <TextView
+        android:id="@+id/importStatusTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Import Database"
-        app:icon="@drawable/baseline_create_new_folder_24"
-        app:iconGravity="textStart"/>
+        android:text=""
+        android:scrollbars="vertical"
+        android:maxLines="10"/>
+
 </LinearLayout>
