--- a/app/src/main/res/layout/fragment_setting_autobackup_directory_selection.xml
+++ b/app/src/main/res/layout/fragment_setting_autobackup_directory_selection.xml
@@ -3,18 +3,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
-
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/autoBackup_enabled"
+        android:text="@string/auto_backup_enabled"/>
     <Button
         android:id="@+id/selectDirectoryButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Directory" />
-
+        android:text="@string/select_directory" />
     <TextView
         android:id="@+id/selectedDirectoryTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="No directory selected" />
-
+        android:text="@string/no_directory_selected" />
 </LinearLayout>
