- Create fragment for display currencies - Create fragment for adding currencies - Create fragment for changing primary currency - A new reusable fragment created for number with precision

--- a/app/src/main/res/layout/fragment_settings_home.xml
+++ b/app/src/main/res/layout/fragment_settings_home.xml
@@ -26,6 +26,16 @@
         android:layout_height="1dp"
         android:background="@color/separator_color"/>
     <TextView
+        android:id="@+id/currencies_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/manage_currencies"
+        style="@style/LargeText"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/separator_color"/>
+    <TextView
         android:id="@+id/export_database_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
